# graphify-mesh

./: .gitignore  .graphifyignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: architecture.md  configuration.md  keeping-sync-up-to-date.md  mcp-server.md  setup.md
examples/: manual-relations.example.json  manual-relations.schema.json  registry.example.json
examples/systemd/: graphify-mesh-sync.env.example  graphify-mesh-sync.service  graphify-mesh-sync.timer  reap-graphify-serve.service  reap-graphify-serve.timer
simple/: index.html
simple/graphify-mesh/: index.html
src/graphify_mesh/: __init__.py
src/graphify_mesh/server/: __init__.py  config.py  context_pack.py  embed_query.py  lexical_read.py  project_map.py  protocol.py  ranking.py  retrieval.py  scope.py  server.py  similar.py  store.py
src/graphify_mesh/sync/: __init__.py  backend.py  cli.py  config.py  discovery.py  embed_similarity.py  embedding.py  graphify_cli.py  lexical_index.py  locking.py  naming.py  overlay.py  overlay_api.py  overlay_depends.py  overlay_refs.py  overlay_similar.py  pipeline.py  progress.py  publish.py  reaper.py  reaper_cli.py  registry.py  repo_tags.py  rss.py  source_cache.py  state.py  sync_project.py  validate.py  vectors.py
tests/fixtures/fake_graphify/: graphify
tests/fixtures/graphs/: repo_b.json  repo_forbidden_edge.json
tests/hardening/: _env_helper.py  test_gates.py  test_reaper.py  test_reaper_cli.py
tests/server/: conftest.py  test_context_pack.py  test_hardening.py  test_lexical_read.py  test_project_map.py  test_protocol.py  test_ranking_fusion.py  test_retrieval_vectors.py  test_scope.py  test_scope_before_ranking.py  test_server.py  test_similar.py  test_stdio_e2e.py  test_store.py
tests/sync/: conftest.py  test_backend.py  test_bootstrap_and_dirty.py  test_config_urls.py  test_discovery.py  test_embed_similarity.py  test_embedding.py  test_extract_concurrency.py  test_extract_concurrency_settings.py  test_lexical_index.py  test_locking.py  test_naming.py  test_overlay.py  test_publish_prune.py  test_registry.py  test_repo_tags.py  test_rss.py  test_staging_sweep.py  test_state_recovery.py  test_sync_engine.py  test_validate.py  test_vectors.py
tests/sync/fixtures/fake_graphify/: graphify
tests/sync/fixtures/graphs/: repo_a.json
