[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "graphify-mesh"
dynamic = ["version"]
description = "Scheduled sync engine + companion MCP server that merges many per-repo graphify knowledge graphs into one repo-attributed, human-named global graph with a cross-project dependency/similarity/API overlay."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [{ name = "AgentScopeX" }]
keywords = ["graphify", "knowledge-graph", "mcp", "code-intelligence", "cross-project"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
]
dependencies = [
    # PyYAML: parsing composer.lock/package-lock style + overlay manifest inputs
    #   (graphify_mesh.sync.overlay_depends).
    "PyYAML>=6.0,<7",
    # jsonschema: validates the human-authored manual-relations.json against
    #   manual-relations.schema.json (graphify_mesh.sync.overlay_depends).
    "jsonschema>=4.0,<5",
    # graphifyy: the upstream graphify CLI/library (PyPI project name
    #   "graphifyy", import name "graphify"; github.com/Graphify-Labs/graphify).
    #   The sync pipeline shells out to the `graphify` binary (resolved via
    #   GRAPHIFY_BIN) AND imports `graphify.build.distinct_repo_tags` directly
    #   at merge time — this is a real importable dependency, not just a CLI
    #   on PATH, so it must be declared here.
    "graphifyy>=0.9.20,<1.0",
    # numpy: float32 embedding matrices (sync shard build, overlay ANN
    #   similarity, server query scoring) + .npy shard-format-2 artifacts
    #   loaded with mmap on the read side. Replaced pure-Python list[float]
    #   vectors that cost ~8x the RAM at 38K nodes (see
    #   docs/superpowers/plans/2026-07-21-numpy-embeddings.md).
    "numpy>=1.26,<3",
]

[project.optional-dependencies]
test = ["pytest>=9.0.3,<10", "pytest-cov>=5,<8"]
lint = [
    "ruff>=0.5,<1.0",
    "mypy>=1.10,<2",
    "types-PyYAML",
    "types-jsonschema",
    # NumPy 2.5 stubs use Python 3.12 syntax, while mypy intentionally checks
    # the project's minimum supported Python version (3.11).
    "numpy<2.5",
]
dev = ["graphify-mesh[test,lint]"]

[project.urls]
Homepage = "https://github.com/AgentScopeX/graphify-mesh"
Repository = "https://github.com/AgentScopeX/graphify-mesh"

[project.scripts]
graphify-mesh-sync = "graphify_mesh.sync.cli:main"
graphify-mesh-server = "graphify_mesh.server.server:main"
graphify-mesh-reap = "graphify_mesh.sync.reaper_cli:main"

[tool.hatch.version]
# Single source of truth for the version is the git tag itself (vX.Y.Z) —
# no more manually-maintained __version__ string that can drift out of sync
# with what was actually tagged/released (see CHANGELOG 0.0.4: __version__
# was stuck at 0.0.2 across the v0.0.3/v0.0.4 tags because nobody remembered
# to bump the static string before tagging).
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/graphify_mesh/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/graphify_mesh"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
# Pragmatic first pass:
#   E/W  pycodestyle, F pyflakes, I isort, UP pyupgrade,
#   B    flake8-bugbear, S flake8-bandit (security).
select = ["E", "F", "W", "I", "UP", "B", "S"]

[tool.ruff.lint.per-file-ignores]
# Tests legitimately use bare asserts (S101) and fixed test values that
# bandit misreads as secrets/pickles/subprocess risks (noise in tests).
"tests/**" = ["S101", "S105", "S106", "S108", "S311", "S603", "S607"]

[tool.mypy]
# No strict mode: the codebase is untyped in places — pragmatic first pass.
python_version = "3.11"
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = "graphify.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
# src-layout: make `graphify_mesh` importable when running the test suite
# without an editable install (`python -m pytest tests/`).
pythonpath = ["src"]
testpaths = ["tests"]
